--- a/ref/msal-common/modules/_src_request_authorizationurlrequest_.html
+++ b/ref/msal-common/modules/_src_request_authorizationurlrequest_.html
@@ -93,9 +93,9 @@
 							<p>Request object passed by user to retrieve a Code from the server (first leg of authorization code grant flow)</p>
 						</div>
 						<ul>
-							<li>scopes                     - Scopes the application is requesting access to</li>
-							<li>authority                  - Url of the authority which the application acquires tokens from</li>
-							<li>correlationId              - Unique GUID set per request to trace a request end-to-end for telemetry purposes</li>
+							<li>scopes                     - Array of scopes the application is requesting access to.</li>
+							<li>authority                  - Url of the authority which the application acquires tokens from.</li>
+							<li>correlationId              - Unique GUID set per request to trace a request end-to-end for telemetry purposes.</li>
 							<li>redirectUri                - The redirect URI where authentication responses can be received by your application. It must exactly match one of the redirect URIs registered in the Azure portal.</li>
 							<li>extraScopesToConsent       - Scopes for a different resource when the user needs consent upfront.</li>
 							<li>responseMode               - Specifies the method that should be used to send the authentication result to your app. Can be query, form_post, or fragment. If no value is passed in, it defaults to query.</li>
