--- a/ref/msal-common/modules/_src_request_refreshtokenrequest_.html
+++ b/ref/msal-common/modules/_src_request_refreshtokenrequest_.html
@@ -92,7 +92,7 @@
 						<div class="lead">
 							<p>RefreshTokenRequest</p>
 							<ul>
-								<li>scopes                  - A space-separated array of scopes for the same resource.</li>
+								<li>scopes                  - Array of scopes the application is requesting access to.</li>
 								<li>authority               - URL of the authority, the security token service (STS) from which MSAL will acquire tokens.</li>
 								<li>correlationId           - Unique GUID set per request to trace a request end-to-end for telemetry purposes.</li>
 								<li>refreshToken            - A refresh token returned from a previous request to the Identity provider.</li>
