--- a/ref/msal-common/modules/_src_request_authorizationcoderequest_.html
+++ b/ref/msal-common/modules/_src_request_authorizationcoderequest_.html
@@ -93,7 +93,7 @@
 							<p>Request object passed by user to acquire a token from the server exchanging a valid authorization code (second leg of OAuth2.0 Authorization Code flow)</p>
 						</div>
 						<ul>
-							<li>scopes                  - A space-separated array of scopes for the same resource.</li>
+							<li>scopes                  - Array of scopes the application is requesting access to.</li>
 							<li>authority:              - URL of the authority, the security token service (STS) from which MSAL will acquire tokens. If authority is set on client application object, this will override that value. Overriding the value will cause for authority validation to happen each time. If the same authority will be used for all request, set on the application object instead of the requests.</li>
 							<li>correlationId           - Unique GUID set per request to trace a request end-to-end for telemetry purposes.</li>
 							<li>redirectUri             - The redirect URI of your app, where the authority will redirect to after the user inputs credentials and consents. It must exactly match one of the redirect URIs you registered in the portal.</li>
