--- a/ref/msal-node/classes/_src_client_clientapplication_.clientapplication.html
+++ b/ref/msal-node/classes/_src_client_clientapplication_.clientapplication.html
@@ -242,7 +242,7 @@
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Gets the cache manager for the application.</p>
+									<p>Gets the token cache for the application.</p>
 								</div>
 							</div>
 							<h4 class="tsd-returns-title">Returns <a href="_src_cache_tokencache_.tokencache.html" class="tsd-signature-type">TokenCache</a></h4>
